mainwindow: fix arrowkeys for next/prev row. UpgradeDialog: add open release notes, add download in browser, add keyboard usage, add pick nearest version

--- a/UnityLauncherPro/MainWindow.xaml
+++ b/UnityLauncherPro/MainWindow.xaml
@@ -72,7 +72,7 @@
 		</Style>
 
 		<!-- datagrid hide selected cell borders -->
-		<Style TargetType="{x:Type DataGridCell}">
+		<!--<Style TargetType="{x:Type DataGridCell}">
 			<Setter Property="BorderBrush" Value="Transparent" />
 			<Setter Property="FocusVisualStyle" Value="{x:Null}" />
 			<Setter Property="Margin" Value="0,0.5,0,0.5" />
@@ -84,7 +84,7 @@
 					<Setter Property="Background" Value="Transparent" />
 				</Trigger>
 			</Style.Triggers>
-		</Style>
+		</Style>-->
 
 		<!-- custom buttons -->
 		<Style x:Key="CustomButton" TargetType="Button">
@@ -291,7 +291,7 @@
 					<Button Style="{StaticResource CustomButton}" ToolTip="Add existing project" x:Name="btnAddProjectFolder" Content="Add Project.." Height="22" Width="78" HorizontalAlignment="Right" VerticalAlignment="Top" Background="#FF3F3F46" Foreground="#FFC1C1C1" Margin="0,4,34,0" Click="BtnAddProjectFolder_Click" BorderBrush="{x:Null}" />
 					<Button Style="{StaticResource CustomButton}" ToolTip="Refresh list (F5)" x:Name="btnRefreshProjectList" Content="⟳" Height="22" Width="22" HorizontalAlignment="Right" VerticalAlignment="Top" FontSize="16" Background="#FF3F3F46" Foreground="#FFC1C1C1" Margin="0,4,3,0" Padding="1,-2,1,1" BorderBrush="{x:Null}" Click="BtnRefreshProjectList_Click"/>
 
-					<DataGrid x:Name="gridRecent" SelectionMode="Single" Margin="4,30,2,42" Background="{x:Null}" BorderBrush="{x:Null}" ColumnHeaderStyle="{StaticResource HeaderStyle}" Padding="0" HorizontalScrollBarVisibility="Disabled" HeadersVisibility="Column" Foreground="#FFD8D8D8" HorizontalGridLinesBrush="#4C000000" VerticalGridLinesBrush="#19000000" AutoGenerateColumns="False">
+					<DataGrid x:Name="gridRecent" SelectionMode="Single" KeyboardNavigation.TabNavigation="Once" Margin="4,30,2,42" Background="{x:Null}" BorderBrush="{x:Null}" ColumnHeaderStyle="{StaticResource HeaderStyle}" Padding="0" HorizontalScrollBarVisibility="Disabled" HeadersVisibility="Column" Foreground="#FFD8D8D8" HorizontalGridLinesBrush="#4C000000" VerticalGridLinesBrush="#19000000" AutoGenerateColumns="False" PreviewKeyDown="GridRecent_PreviewKeyDown">
 						<DataGrid.Columns>
 							<DataGridTextColumn Binding="{Binding Title}" ClipboardContentBinding="{x:Null}" Header="Project" IsReadOnly="True" Width="150"/>
 							<DataGridTextColumn Binding="{Binding Version}" ClipboardContentBinding="{x:Null}" Header="Version" IsReadOnly="True" Width="72">
