--- a/UnityLauncherPro/UpgradeWindow.xaml
+++ b/UnityLauncherPro/UpgradeWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:UnityLauncherPro"
         mc:Ignorable="d"
-        Title="Upgrade Project Version" Height="533.165" Width="418.684" Background="{DynamicResource DarkestBackground}" MinWidth="319" MinHeight="555" ResizeMode="NoResize" ShowInTaskbar="False" WindowStartupLocation="CenterOwner" HorizontalAlignment="Left" VerticalAlignment="Top" PreviewKeyDown="Window_PreviewKeyDown">
+        Title="Upgrade Project Version" Height="533.165" Width="418.684" Background="{DynamicResource DarkestBackground}" MinWidth="319" MinHeight="555" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" HorizontalAlignment="Left" VerticalAlignment="Top" PreviewKeyDown="Window_PreviewKeyDown" ShowInTaskbar="False">
 	<Window.Resources>
 		<!-- custom buttons -->
 		<Style x:Key="CustomButton" TargetType="{x:Type Button}">
